# nengine

./: Cargo.toml  EULA.md  FEDORA_REQUIREMENTS.md  NDLA.md  README.md  WINDOWS_REQUIREMENTS.md
.cargo/: config.toml
examples/models/: Carrots.mtl
examples/script/: test.js  test.lua
resources/models/rubber_duck/: rubber_duck_toy_2k.gltf
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/ui/text/: fragment.glsl  vertex.glsl
src/: main.rs
src/core/: mod.rs
src/core/engine/: mod.rs
src/core/engine/objects/: graphics.rs
src/core/engine/ortho/: projection.rs
src/core/engine/platform/: events.rs  handler.rs  implementations.rs  mod.rs  ui.rs  window.rs
src/core/engine/script/: globals.rs  mod.rs  parser.rs
src/core/engine/shaders/: manager.rs
src/core/engine/sound/: manager.rs
src/core/engine/threed/: mod.rs  model.rs  projection.rs  view.rs
src/core/engine/ui/: mod.rs  test.rs
src/core/engine/ui/text/: ext.rs  glyph.rs  mod.rs  renderer.rs
src/core/utils/model/: gltf.rs  manager.rs  mod.rs  obj.rs
src/core/utils/texture/: bitmap.rs  manager.rs  mod.rs
src/utils/log/: manager.rs
tests/glyph_extracter/: Cargo.toml
tests/glyph_extracter/src/: main.rs
