[package]
name = "nengine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = { version = "0.14.0" }
egui_glfw = { version = "0.55.2" }

mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
rquickjs = { version = "0.6.2" }

nalgebra = { version = "0.33.0" }
physsol = { version = "0.2.0" }

rodio = { version = "0.19.0" }

serde = { version = "1.0.210" }
smol = { version = "2.0.2" }

notify = { version = "6.1.1" }

rayon = { version = "1.10.0" }

tobj = { version = "4.0.2" }
goth-gltf = { version = "0.1.1" }
